Added total run time statistics 
Added checking for updates
Added sending anonymous statistics use
Added setting --disablemenuandexit: it closes the emulator when the menu is going to be opened. 
 It's the same behaviour as previous --disablemenu. Now --disablemenu only disables the menu but does not close the emulator
 
Added Borland Gui Style

Added ZRCP commands:
-set-ui-io-ports: to change keyboard state and joystick
-get-ui-io-ports: to get keyboard state and joystick
-get-snapshot: get a ZSF snapshot from ZRCP
-print-footer: print message on footer
-put-snapshot: put a ZSF snapshot from ZRCP
-send-keys-event: simulates key press/release
-write-port: write value to a port

Added internal zip decompressor: no more need to use external unzip program

Improved Debugging: 
-added setting to dump .zsf snapshot when a cpu panic is fired
-debug CPU window: can now resize height and have more debug lines
-cpu transaction log: faster when opening transaction log file

Improved TBBlue emulation:
-added scroll x,y on ula layer
-optimized ula,lores render routines: 2% less cpu on my computer
-added 1-bit tile mode

Improved Hex editor: can now copy to a different memory zone
Improved menu: 
-can now use PgUp,PgDn to jump menu pages
-added setting to disable File Utilities menu
Improved assembler: added defs command
Improved AY Sheet: now you can select which AY Chip to show
Improved file selector: when asking for a directory, only shows directories, not files
Improved curses driver: symbol @ simulates ESC on menu
Improved snapshot loading: now setting "--sna-no-change-machine" becomes "--snap-no-change-machine" and applies to .sna and .z80

Fixed Pentagon border: now ukflag demo is perfect
Fixed Spectrum 128k machines border: now ula128, scroll2017 demos are perfect
Fixed f_seek call on esxdos handler
Fixed segfault error when using breakpoints like peek/opcode in config file
Fixed bug on zxuno changing video ram 5/7 when paging was disabled by bit DI7FFD